--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,276 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import 'bootstrap/dist/css/bootstrap.css';
+
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+.card{
+background: #FFFFFF;
+box-shadow: 0px 4px 12px rgba(66, 66, 66, 0.198454);
+}
+.btn-card{
+  color: #fff;
+  font-weight: 600;
+  background-color: #000;
+  border: none;
+  padding: 10px;
+  width: 60%;
+  border-radius: 10px;
+  font-size: 24px;
+  margin-bottom: 39px;
+}
+.subtitle-card{
+font-weight: 300;
+font-size: 24px;
+margin: 0;
+margin-bottom: 20px;
+padding: 0;
+}
+.subtitle-card-1{
+  font-weight: 300;
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
+  }
+.subtitle-card-2{
+  font-weight: 700;
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+  }
+.title-card{
+  font-weight: 600;
+  font-size: 40px;
+  }
+.meio{
+  padding: 20px;
+}
+.orange{
+  height: 20px;
+  width: auto;
+  margin-top: -20px;
+  background-color: #E88D39;
+
+}
+.green{
+  height: 20px;
+  width: auto;
+  margin-top: -20px;
+  background-color: #4AC959;
+
+}
+.form-check{
+  margin-bottom: 14px;
+  
+
+}
+.checkbox-orange{
+  border: 2px solid #E88D39;
+  box-sizing: border-box;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.form-check-label{
+  
+}
+.checkbox-orange[type=checkbox] {
+
+  border-radius: 50%;
+}
+@media only screen and (max-width: 600px) {
+  .logoLateral {
+    width: 129px;
+    position: relative;
+    top: 9px;
+    
+  }
+.titles-banner {
+  position: absolute;
+  left: 5%;
+  top: 2%;
+}
+.title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 60px;
+}
+.subititulo-diagonal {
+  position: absolute;
+  left: 5%;
+  right: 5%;
+  top: 33%;
+  color: #fff;
+  transform: skewY(5deg);
+  text-decoration: none;
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 24px;
+}
+.diagonal {
+  background-color: #000;
+  transform: sKewY(-5deg);
+  width: 100%;
+  height: 200px;
+  margin-bottom: 10%;
+  text-align: center;
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.subtitle-2 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  
 }
+}
+
+
+@media only screen and (min-width: 600px) {
+  .btn-entrar{
+    background-color: #000;
+    color: #fff;
+    border:none;
+    z-index: 10;
+    height: 40px;
+    width: 120px;
+  }
+  
+  .diagonal {
+    background-color: #000;
+    transform: sKewY(
+  -5deg);
+    width: 100%;
+    height: 400px;
+    text-align: center;
+    margin-bottom: 10%;
+    position: relative;
+  }
+  
+  .titles-banner{
+    position: absolute;
+    width: 621px;
+    height: 319px;
+    left: 80px;
+    top: 208px;
+    
+  }
+  .title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 80px;
+  }
+header{
+margin-left: 80px;
+margin-top: 10px;
+margin-right: 80px;
+}
+
+.subititulo-diagonal{
+  position: absolute;
+  left: 5%;
+  right: 5%;
+  top: 40%;
+  color:#fff;
+  transform:skewY(5deg);
+  text-decoration: none;
+  border-radius: nullpx;
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 30px;
+}
+.title-diagonal {
+  position: relative;
+  top: 10%;
+  color: #fff;
+  transform: skewY(
+5deg);
+  z-index: 1;
+  text-decoration: underline;
+  font-size: 50px;
+  font-weight: 600;
+  text-decoration-color: #4ac959;
+}
+
+
+}
+
+
+
+@media only screen and (max-width: 600px) {
+
+  header{
+    margin: 10px;
+      }
+    .item-2{
+      position: relative;
+    }
+    
+    .title-diagonal {
+      position: relative;
+      top: 12%;
+      color: #fff;
+      transform: skewY(5deg);
+      z-index: 1;
+      text-decoration: underline;
+      font-size: 30px;
+      font-weight: 600;
+      text-decoration-color: #4ac959;
+  }
+.btn-entrar{
+  background-color: #000;
+  color: #fff;
+  border:none;
+  z-index: 10;
+  height: 40px;
+  width: 80px;
+}
+}
+
+
+
+.subtitle{
+  font-weight: 300;
+  color: #4AC959;
+}
+
+@media only screen and (max-width: 600px) {
+.slide01{
+  position: absolute;
+  right: 5%;
+  top: 17%;
+  width: 100px;
+
+
+}
+
+
+}
+.slide01{
+  position: absolute;
+  right: 4%;
+  top: 20%;
+}
+
+
+
+
+  .Slide01{
+    width: 400px;
+    height: 400px;
+  
+   }
+  .banner
+  {
+    display: flex;
+    justify-content: flex-end;
+    z-index: 5;
+    position: relative;
+    
+
+  }
+
+
+
