--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import 'bootstrap/dist/css/bootstrap.css';
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
 
 
 
@@ -7,14 +8,58 @@
   padding: 0;
   margin: 0;
 }
+.sv{
+  padding-top: 10px;
+}
+
+.sv-icon-green{
+position: absolute;
+left: 81%;
+top: 40.82%;
+bottom: 31.73%;
+
+
+
+}
+.read-more{
+  text-decoration: none;
+  color: #42D76B;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+
+.sv-icon-function{
+  color: #9499B3;
+  text-decoration: none;
+  border: 1px solid #9499B3;
+  height: 31px;
+  width: 86px;
+  border-radius: 16px;
+  padding: 6px 12px;
+}
 .card{
 border-radius: 0;
 background: #FFFFFF;
 box-shadow: 0px 4px 12px rgba(66, 66, 66, 0.198454);
+
+}
+.card-img-top{
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
 }
 
 @media only screen and (min-width: 850px) {
+  .fundo-green{
+    position: relative;
+    border-radius: 10px;
+    height: 520px;
+    width: 90%;
+    margin-top: 30px;
+    background-color: #4AC959;
 
+  }
     .subtitle {
       font-weight: 300;
       color: #4AC959;
@@ -86,20 +131,21 @@ padding: 0;
 
 }
 
-.fundo-green{
-  position: relative;
-  right: 60px;
-  border-radius: 10px;
-  height: 520px;
-  width: 100%;
-  margin-top: 30px;
-  background-color: #4AC959;
 
+.card-2{
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  
 
 }
-.card-2{
-  border-radius: 12px;
-  margin: 10px;
+.card-body > p{
+  font-family: 'Lato', sans-serif;
+ font-style: normal;
+ font-weight: normal;
+ font-size: 20px;
+ line-height: 120%;
+ color: #312F4F !important;
+ margin-top: 10px;
 
 }
 
@@ -267,11 +313,33 @@ padding: 0;
     left: 5%;
     top: 2%;
   }
+  .card-2{
+    border-radius: 12px;
+    margin: 0;
+    border: 0;
+    padding-left: 0;
+    padding-right: 0;
+    width: 400;
+    margin-bottom: 10px;
+    border-radius: 16px;
+    
+  
+  }
+
   
 }
 
 @media only screen and (min-width: 600px) {
 
+  .servicos{
+    display: block;
+    position: relative;
+    top: 20%;
+    left: 10%;
+  }
+
+
+  
   .logoLateral {
     width: 460px;
     position: relative;
@@ -425,4 +493,29 @@ margin-right: 80px;
 
 
 
+
+
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  font-size: 18px;
+  
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
 
