--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import 'bootstrap/dist/css/bootstrap.css';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
 
 
@@ -7,25 +7,38 @@
 *{
   padding: 0;
   margin: 0;
+  
 }
+body, html {
+  overflow-x: hidden;
+  }
+
 .sv{
   padding-top: 10px;
 }
 
+
 .sv-icon-green{
-position: absolute;
-left: 81%;
+position: relative;
+left: 79%;
 top: 40.82%;
-bottom: 31.73%;
+margin-top: -30px;
 
 
 
+}
+.card-body {
+  flex: 1 1 auto;
+  padding: 0rem 1rem;
 }
 .read-more{
   text-decoration: none;
   color: #42D76B;
   font-weight: bold;
   font-size: 16px;
+  right: 10px;
+  margin-top: -30px;
+  position: relative;
   line-height: 150%;
 }
 
@@ -40,9 +53,12 @@ bottom: 31.73%;
   padding: 6px 12px;
 }
 .card{
-border-radius: 0;
+  
+border: none;
+border-radius: 12px;
 background: #FFFFFF;
-box-shadow: 0px 4px 12px rgba(66, 66, 66, 0.198454);
+/* Shadow Light */
+box-shadow: 8px 8px 24px 0px #0C29D029;
 
 }
 .card-img-top{
@@ -51,6 +67,12 @@ box-shadow: 0px 4px 12px rgba(66, 66, 66, 0.198454);
 }
 
 @media only screen and (min-width: 850px) {
+  .servicos{
+    display: block;
+    position: relative;
+    top: 20%;
+    left: 10%;
+  }
   .fundo-green{
     position: relative;
     border-radius: 10px;
@@ -135,7 +157,8 @@ padding: 0;
 .card-2{
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
-  
+  box-shadow: 8px 8px 24px 0px #0C29D029 !important;
+
 
 }
 .card-body > p{
@@ -146,6 +169,7 @@ padding: 0;
  line-height: 120%;
  color: #312F4F !important;
  margin-top: 10px;
+ min-height: 80px;
 
 }
 
@@ -271,13 +295,9 @@ padding: 0;
 }
 
 
-.subtitle-2 {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 10px;
-  
-}
+
 @media only screen and (min-width: 720px) {
+
   .logoLateral {
     width: 307px;
     position: relative;
@@ -305,38 +325,67 @@ padding: 0;
   position: relative;
   top: 13px;
 }
-
+.subtitle-2 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  
 }
-@media only screen and (min-width: 300px) and (max-width: 850px) {
+}
+@media only screen and (min-width: 300px) and (max-width: 800px) {
+  .subtitle-2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    
+  }
   .titles-banner {
     position: absolute;
     left: 5%;
     top: 2%;
   }
-  .card-2{
+
+  .title-services{
+    font-size: 48px;
+      font-weight: 700;
+      color: #fff;
+      position: relative;
+      left: 10%;
+      top: 9%;
+  }
+  .fundo-green{
+    position: relative;
+    border-radius: 10px;
+  
+    width: 100%;
+    margin-top: 30px;
+    background-color: #4AC959;
+  }
+    .card-2{
     border-radius: 12px;
-    margin: 0;
+    margin: 10px;
     border: 0;
     padding-left: 0;
     padding-right: 0;
     width: 400;
     margin-bottom: 10px;
     border-radius: 16px;
-    
   
   }
 
   
 }
-
+@media only screen and (min-width: 600px) and (max-width: 700px) {
+  .subtitle-2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    
+  }
+}
 @media only screen and (min-width: 600px) {
 
-  .servicos{
-    display: block;
-    position: relative;
-    top: 20%;
-    left: 10%;
-  }
+
 
 
   
@@ -495,27 +544,4 @@ margin-right: 80px;
 
 
 
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  font-size: 18px;
-  
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
 
