--- a/src/components/homeCard/style.css
+++ b/src/components/homeCard/style.css
@@ -25,3 +25,12 @@ width: 60%;
 .btn-add{
     width: 10%;
 }
+
+.card-1{
+    border-top-left-radius:0px;
+    border-top-right-radius:0px
+}
+.form-check-input:checked {
+    background-color: #4ac959;
+    border-color: #4ac959;
+}
