--- a/src/index.css
+++ b/src/index.css
@@ -54,13 +54,13 @@ box-shadow: 8px 8px 24px 0px #0C29D029;
   width: 60%;
   border-radius: 10px;
   font-size: 24px;
+  margin-top: 15px;
   margin-bottom: 39px;
 }
 .subtitle-card{
 font-weight: 300;
 font-size: 24px;
 margin: 0;
-margin-bottom: 20px;
 padding: 0;
 }
 .subtitle-card-1{
@@ -134,7 +134,7 @@ padding: 0;
     top: 9%;
 }
 .form-check{
-  margin-bottom: 14px;
+  margin-bottom: 5px;
   
 
 }
